# hello-world

./: README.md
kotlin/hello-world-draw/: README.md  settings.gradle
kotlin/hello-world-draw/app/: build.gradle
kotlin/hello-world-draw/app/src/main/: AndroidManifest.xml
kotlin/hello-world-draw/app/src/main/res/drawable/: ic_person.xml
kotlin/hello-world-draw/app/src/main/res/layout/: activity_main.xml
kotlin/hello-world-draw/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
kotlin/hello-world-draw/app/src/main/res/values-night/: themes.xml
kotlin/hello-world-draw/gradle/wrapper/: gradle-wrapper.properties
kotlin/hello-world-retrieve-draw-image/: README.md  settings.gradle
kotlin/hello-world-retrieve-draw-image/app/: build.gradle
kotlin/hello-world-retrieve-draw-image/app/src/main/: AndroidManifest.xml
kotlin/hello-world-retrieve-draw-image/gradle/wrapper/: gradle-wrapper.properties
kotlin/hello-world-sqlite/: settings.gradle
kotlin/hello-world-sqlite/app/: build.gradle
kotlin/hello-world-sqlite/app/src/main/: AndroidManifest.xml
kotlin/hello-world-sqlite/app/src/main/assets/: word_frequency_list.db
kotlin/hello-world-sqlite/gradle/wrapper/: gradle-wrapper.properties
kotlin/hello-world-with-cpp/: settings.gradle
kotlin/hello-world-with-cpp/app/: build.gradle
kotlin/hello-world-with-cpp/app/src/main/: AndroidManifest.xml
kotlin/hello-world-with-cpp/app/src/main/cpp/: CMakeLists.txt  geometry-lib.cpp  myjni.h
kotlin/hello-world-with-cpp/gradle/wrapper/: gradle-wrapper.properties
(+25 files in other folders)
